src/objects/Veda_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ApplicantRecId__c</fullName>
        <label>ApplicantRecId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>click_Applicant__c</referenceTo>
        <relationshipLabel>Veda Summaries</relationshipLabel>
        <relationshipName>Veda_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Veda Summaries</relationshipLabel>
        <relationshipName>Veda_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veda Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>